# shuttlings-cch24

./: Cargo.toml  README.md  Shuttle.toml
migrations/: 20241219162620_create-quotes.sql
src/: main.rs
src/day/: d12.rs  d16.rs  d19.rs  d2.rs  d23.rs  d5.rs  d9.rs  d_1.rs  mod.rs
