[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.0", features = ["multipart"] }
cargo-manifest = "0.18.0"
handlebars = "6.2.0"
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
sea-query = { version = "0.32.1", features = ["with-uuid"] }
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres", "with-uuid"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["macros"] }
serde_yaml = "0.9.34"
shuttle-axum = "0.51.0"
shuttle-runtime = "0.51.0"
shuttle-shared-db = { version = "0.51.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["uuid", "chrono"] }
tokio = "1.42.0"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
uuid = { version = "1.11.0", features = ["v4"] }
